Added code to see if it shows.

--- a/machine_learning/2020/HW4a_2020.ipynb
+++ b/machine_learning/2020/HW4a_2020.ipynb
@@ -30,11 +30,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Section\n",
+    "\n",
+    "Adding a section"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Subsection\n",
+    "\n",
+    "And another one"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def bla:\n",
+    "    pass"
+   ]
   }
  ],
  "metadata": {
