Added neural network illustrations.

--- a/machine_learning/2020/HW4a_2020.ipynb
+++ b/machine_learning/2020/HW4a_2020.ipynb
@@ -49,11 +49,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def bla:\n",
+    "def bla():\n",
     "    pass"
    ]
   }
