Fixed sign in expression for BCE.

--- a/machine_learning/2020/HW4a_2020.ipynb
+++ b/machine_learning/2020/HW4a_2020.ipynb
@@ -132,7 +132,7 @@
     "Given independent pairs of samples $(x_1,  y_1), \\ldots, (x_n, y_n)$ show that minimizing the binary cross entropy loss\n",
     "\n",
     "\\begin{align}\n",
-    "BCE = -\\frac{1}{n}\\sum_{i = 1}^n (1 - y)\\log(f(x) - 1) + y\\log(f(x))\n",
+    "BCE = -\\frac{1}{n}\\sum_{i = 1}^n (1 - y)\\ \\log(1 - f(x)) + y\\ \\log(f(x))\n",
     "\\end{align}\n",
     "\n",
     "maximizes the likelihood of the data.\n",
