Added simple example for image classification with pytorch.

--- a/machine_learning/2020/HW4a_2020.ipynb
+++ b/machine_learning/2020/HW4a_2020.ipynb
@@ -797,8 +797,8 @@
     "                optimizer,\n",
     "                device):\n",
     "    \"\"\"\n",
-    "    Again, this should be a usefule\n",
-    "    \n",
+    "    Again, this should be a useful docstring, but that would\n",
+    "    give away the answer for the exercise.\n",
     "    \"\"\"\n",
     "    \n",
     "    model.train()\n",
