Fixed typo in ex. 2a.

--- a/machine_learning/2020/HW4a_2020.ipynb
+++ b/machine_learning/2020/HW4a_2020.ipynb
@@ -723,7 +723,7 @@
     "### 2, a) (2 points)\n",
     "\n",
     "Inspect the code given below and, using the documentation of the [`torch.nn`](https://pytorch.org/docs/stable/nn.html#torch.nn.Module) module, answer the following questions:\n",
-    "- What is the network of instances of the `FullyConnected` class?\n",
+    "- What is the architecture of instances of the `FullyConnected` class?\n",
     "- What activations functions are applied in the hidden layers?\n",
     "- What activation function is used for the output?\n",
     "- How are the parameters of the network initialized? Why is this important?"
