Made instructions of RNN exercise more clear.

--- a/machine_learning/2020/HW4b_2020.ipynb
+++ b/machine_learning/2020/HW4b_2020.ipynb
@@ -177,11 +177,6 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### Training and testing data\n",
     "\n",
@@ -190,7 +185,7 @@
     "> **Note 1:** Input and outputs in the dataset are all normalized to have mean 0 and standard deviation 1. For simplicity, we will from now on consider forcings and outputs in normalized units instead of the units given in the plot above.\n",
     "\n",
     "> **Note 2:** Pytorch expects tensors of sequences to have the elements in the sequence along the first dimension and the batch elements along the second. A tensor containing a batch of 8 samples from the `Streamflow` data thus\n",
-    "has shape `(200, 8, 6)`."
+    "has shape `(400, 8, 6)`."
    ]
   },
   {
@@ -210,7 +205,7 @@
     "\n",
     "### 2, a) (1 point)\n",
     "\n",
-    "Write a custom `torch.nn.Module` subclass that implements the basic RNN from exercise 1 but including bias terms for the mappings from input to hidden state, hidden state to hidden state, and hidden state to output. This means\n",
+    "Write a custom `torch.nn.Module` subclass that implements the basic RNN from theoretical exercise 1 **without using the predefined `nn.RNN` class provided by `pytorch`**. Include the bias terms for the mappings from input to hidden state, hidden state to hidden state, and hidden state to output. This means\n",
     "that for step $t$, the hidden state $h_t$ and output $\\hat{y}_t$ should be given by:\n",
     "\n",
     "\\begin{align}\n",
