Fixed some typos in presentation.

--- a/machine_learning/2020/presentations/loss_functions_and_datasets.ipynb
+++ b/machine_learning/2020/presentations/loss_functions_and_datasets.ipynb
@@ -21,7 +21,7 @@
    "source": [
     "## General case: $n$ classes\n",
     "- Predict vector of probabilities: $[p_{c = 1}, \\ldots, p_{c=n}]$\n",
-    "- What do we expect from the predicted probabilities:\n",
+    "- What we expect from the predicted probabilities:\n",
     "    - Should be in [0, 1]\n",
     "    - Should sum to 1\n",
     "   "
@@ -42,7 +42,8 @@
     "    \n",
     "- Using $n$ output neurons over-parametrizes the model, because the sum of probabilities\n",
     "  must be 1\n",
-    "  - Not a problem in practice"
+    "  - Not a problem in practice\n",
+    "  - c.f. Section 6.2.2 in the [deep learning book](https://www.deeplearningbook.org/contents/mlp.html)."
    ]
   },
   {
@@ -58,7 +59,7 @@
     "    - $p_{c=2} = 1 - p_{c=1}$\n",
     "- Now we only need to map output to [0, 1]\n",
     "- This is achieved using a sigmoid activation function:\n",
-    "    - $f(x) = \\frac{1}{1 + \\exp(-x)}$\n"
+    "    - $\\sigma(z) = \\frac{1}{1 + \\exp(-z)}$\n"
    ]
   },
   {
@@ -74,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -129,7 +130,7 @@
     }
    },
    "source": [
-    "- To monitor training progress,the data available for training is split\n",
+    "- To monitor training progress, the data available for training is split\n",
     "  into training and validation set"
    ]
   },
@@ -158,10 +159,10 @@
    "source": [
     "## Understanding `training_data` and `validation_data`\n",
     "\n",
-    "- Training data is split by only by indices\n",
+    "- Training data is split only by indices\n",
     "- `training_data.indices` and `validation_data.indices` contain indices\n",
-    "  of images in each part of the data\n",
-    "- When requested these images are taken from the dataset stored in\n",
+    "  of images in each part\n",
+    "- When requested these images are taken from the dataset referenced in\n",
     "  `training_data.dataset` and `validation_data.dataset`"
    ]
   },
