Fixed some typos.

--- a/machine_learning/2020/HW4b_2020.ipynb
+++ b/machine_learning/2020/HW4b_2020.ipynb
@@ -246,7 +246,7 @@
    "source": [
     "## [Exerise 3] (2 points)\n",
     "\n",
-    "### 3, a) (2 point)\n",
+    "### 3, a) (2 points)\n",
     "\n",
     "Train a LSTM neural network on the streamflow data. The network should have at least one `LSTM` layer followed by fully-connected layer to map the hidden state to the output dimension.\n",
     "\n",
@@ -263,7 +263,7 @@
     "\n",
     "Evaluate all three models  on the test data. Make a plot with a panel for each of your models that shows predicted and true streamflow. Provide a table with mean absolute error, mean squared error and correlation coefficients. Describe main differences between the results for different models.\n",
     "\n",
-    "> **Hint:** For plotting, you can use `test_data.get_dates()` to get the dates corresponding to the sequence returned by `test_data.get_range()`."
+    "> **Hint:** For plotting, you can use `test_data.data.index` to get the dates corresponding to the sequence returned by `test_data.get_range()`."
    ]
   }
  ],
